# openbadges-core

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml  pytest.ini
docs/: ARCHITECTURE.md  QUICKSTART.md  SETUP.md
examples/: advanced_usage.py  basic_usage.py  jwt_example.py
openbadges_core/: __init__.py  exceptions.py
openbadges_core/crypto/: __init__.py  jwt_signer.py  signer.py  verifier.py
openbadges_core/models/: __init__.py  achievement.py  base.py  credential.py  profile.py  proof.py  subject.py
openbadges_core/serialization/: __init__.py  json_ld.py  jwt.py
openbadges_core/validation/: __init__.py  validator.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_jwt_integration.py
tests/unit/: __init__.py  test_crypto.py  test_jwt.py  test_models.py  test_serialization.py  test_validation.py
